test/libsolidity/syntaxTests/constructor/constructor_override.sol
contract C {
    constructor() override public {}
}
// ----
// TypeError: (17-49): Constructors cannot override.
